# Scientif-calculator

./: CMakeLists.txt  Jenkinsfile  ReadMe.md  calculator  calculator.cpp  calculator.h  test_calculator.cpp
